fixed layout bugs

--- a/beth-landing/css/style.scss
+++ b/beth-landing/css/style.scss
@@ -490,7 +490,7 @@ button, a{
       &_shape{
         position: absolute;
         bottom: 93px;
-        right: 60%;
+        right: 53%;
         background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='394px' height='65px'%3E%3Cpath fill-rule='evenodd' fill='rgb(237, 27, 91)' d='M30.907,0.160 L393.418,0.160 L362.516,64.816 L0.005,64.816 L30.907,0.160 Z'/%3E%3C/svg%3E");
         width: 393px;
         height: 64px;
